# github-issue-prompter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yaml  release.yaml
github_issue_prompter/: __init__.py  command.py  constants.py  github_gql.py  github_rest.py  graphql.py  prompter.py  status.py  types.py
