[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools]
packages = ["github_issue_prompter"]

[project]
name = "github_issue_prompter"
dynamic = ["version"]
description = "Use AI to find GitHub issue's that you can work on (even if the issue's appear active)!"
readme = "README.md"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["github", "issue", "prompter", "openai"]
dependencies = [
    "requests ~= 2.31.0",
    "openai ~= 1.7.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.scripts]
prompt = "github_issue_prompter.command:main"

[project.urls]
Homepage = "https://github.com/itsluketwist/github-issue-prompter"
Code = "https://github.com/itsluketwist/github-issue-prompter"
Download = "https://github.com/itsluketwist/github-issue-prompter/tags"
